feat: enhance multilingual support by adding new translations for various UI elements and improving participant and room management features

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -1,6 +1,7 @@
 {
   "common": {
     "save": "Save",
+    "saving": "Saving...",
     "cancel": "Cancel",
     "edit": "Edit",
     "delete": "Delete",
@@ -27,7 +28,22 @@
     "phone": "Phone",
     "status": "Status",
     "date": "Date",
-    "time": "Time"
+    "time": "Time",
+    "move": "Move",
+    "remove": "Remove",
+    "members": "members",
+    "goToSearch": "Go to Search",
+    "clickToChange": "Click to change",
+    "noLimit": "No limit",
+    "notAssigned": "Not assigned",
+    "select": "Select...",
+    "orCreateNew": "Or create new",
+    "completed": "Completed",
+    "active": "Active",
+    "since": "since",
+    "updating": "Updating...",
+    "currentStatus": "Current Status",
+    "newStatus": "New Status"
   },
   "nav": {
     "search": "Search",
@@ -40,8 +56,15 @@
     "auditLog": "Audit Log",
     "settings": "Settings"
   },
+  "home": {
+    "title": "Participant Check-In",
+    "subtitle": "Search by name, email, or phone number",
+    "searchPlaceholder": "Start typing to search...",
+    "noResults": "No participants found"
+  },
   "participant": {
     "title": "Participants",
+    "subtitle": "Manage all registered participants",
     "addParticipant": "Add Participant",
     "editParticipant": "Edit Participant",
     "participantDetail": "Participant Detail",
@@ -61,17 +84,21 @@
     "unpaid": "Unpaid",
     "memo": "Memo",
     "addMemo": "Add memo",
-    "noMemo": "No memo",
-    "checkInHistory": "Check-in History",
+    "editMemo": "Edit",
+    "noMemo": "No memo added",
+    "memoPlaceholder": "Add notes about this participant...",
+    "checkInHistory": "Check-in / Check-out History",
     "checkIn": "Check In",
     "checkOut": "Check Out",
     "checkedIn": "Checked In",
     "notCheckedIn": "Not Checked In",
     "currentlyCheckedIn": "Currently Checked In",
+    "checkingIn": "Checking in...",
     "session": "Session",
     "duration": "Duration",
     "activeSession": "Active Session",
-    "noCheckInHistory": "No check-in history",
+    "noCheckInHistory": "No check-in history yet",
+    "checkInHistoryDesc": "Check-in and check-out events will appear here",
     "assign": "Assign",
     "change": "Change",
     "unassigned": "Unassigned",
@@ -84,35 +111,92 @@
     "markAsPaid": "Mark as Paid",
     "markAsUnpaid": "Mark as Unpaid",
     "confirmPaymentChange": "Are you sure you want to change the payment status?",
+    "changePaymentStatus": "Change Payment Status",
+    "paymentChangeConfirmText": "Are you sure you want to change the payment status from",
+    "to": "to",
     "selected": "selected",
     "moveToGroup": "Move to Group",
-    "moveToRoom": "Move to Room"
+    "moveToRoom": "Move to Room",
+    "participantNotFound": "Participant not found",
+    "groupRoomAssignment": "Group & Room Assignment",
+    "selectGroup": "Select Group",
+    "selectRoom": "Select Room",
+    "roomFull": "Room is at full capacity",
+    "nameRequired": "Name and email are required",
+    "updateSuccess": "Participant updated successfully",
+    "memoUpdated": "Memo updated"
   },
   "group": {
     "title": "Groups",
+    "subtitle": "Manage participant groups",
     "createGroup": "Create Group",
+    "addGroup": "Add Group",
     "editGroup": "Edit Group",
+    "addNewGroup": "Add New Group",
     "groupName": "Group Name",
+    "groupNamePlaceholder": "Group name",
     "expectedCapacity": "Expected Capacity",
+    "expectedOptional": "Expected (optional)",
     "participantCount": "Participants",
     "deleteGroup": "Delete Group",
-    "confirmDelete": "Are you sure you want to delete this group?",
-    "noGroups": "No groups created yet"
+    "confirmDelete": "Delete group \"{{name}}\"? Participants will be unassigned.",
+    "noGroups": "No groups yet",
+    "noGroupsDesc": "Add groups to organize participants",
+    "groupNotFound": "Group not found",
+    "backToGroups": "Back to groups",
+    "membersCount": "Members ({{count}})",
+    "noMembers": "This group has no members",
+    "groupUpdated": "Group updated successfully",
+    "groupCreated": "Group \"{{name}}\" created",
+    "groupDeleted": "Group \"{{name}}\" deleted",
+    "participantRemoved": "Participant removed from group",
+    "movedTo": "Moved to {{name}}",
+    "noOtherGroups": "No other groups available",
+    "importGroups": "Import Groups",
+    "importPlaceholder": "Group A\nGroup B\nGroup C",
+    "importHelpText": "or paste names below (one per line)",
+    "importedCount": "Imported {{count}} groups",
+    "importedFromCSV": "Imported {{count}} groups from CSV"
   },
   "room": {
     "title": "Rooms",
+    "subtitle": "Manage accommodation rooms",
     "createRoom": "Create Room",
+    "addRoom": "Add Room",
     "editRoom": "Edit Room",
+    "addNewRoom": "Add New Room",
     "roomNumber": "Room Number",
+    "roomNumberPlaceholder": "Room number",
+    "capacity": "Capacity",
     "maxCapacity": "Max Capacity",
     "currentOccupancy": "Current Occupancy",
     "occupancy": "Occupancy",
+    "occupied": "occupied",
     "available": "Available",
     "almostFull": "Almost Full",
     "full": "Full",
     "deleteRoom": "Delete Room",
-    "confirmDelete": "Are you sure you want to delete this room?",
-    "noRooms": "No rooms created yet"
+    "confirmDelete": "Delete room \"{{number}}\"?",
+    "confirmDeleteWithParticipants": "Delete room \"{{number}}\"? {{count}} participants will be unassigned.",
+    "noRooms": "No rooms yet",
+    "noRoomsDesc": "Add rooms for participant accommodation",
+    "roomNotFound": "Room not found",
+    "backToRooms": "Back to rooms",
+    "participantsCount": "Participants ({{count}})",
+    "roomEmpty": "This room is empty",
+    "roomUpdated": "Room updated successfully",
+    "roomCreated": "Room \"{{number}}\" created",
+    "roomDeleted": "Room \"{{number}}\" deleted",
+    "participantRemoved": "Participant removed from room",
+    "movedToRoom": "Moved to Room {{number}}",
+    "noOtherRooms": "No other rooms available",
+    "roomRequired": "Room number is required",
+    "capacityError": "Capacity cannot be less than current occupancy",
+    "importRooms": "Import Rooms",
+    "importPlaceholder": "101,4\n102,4\n103,6",
+    "importHelpText": "or paste below (room,capacity per line)",
+    "importedCount": "Imported {{count}} rooms",
+    "importedFromCSV": "Imported {{count}} rooms from CSV"
   },
   "statistics": {
     "title": "Statistics",
@@ -159,24 +243,30 @@
     "failed": "Import failed. Please check your Firebase configuration.",
     "backToParticipants": "Back to Participants",
     "existingDataWarning": "Existing data found",
-    "existingDataDesc": "There are currently {{count}} participants registered. If the CSV file contains the same email, existing information will be updated.",
+    "existingDataDesc": "There are currently {{count}} participants registered. If the CSV file contains matching name, gender, and email, existing information will be updated.",
     "overlapWarning": "Some existing data will be updated",
     "newRecords": "{{count}} new participants will be added",
-    "updateRecords": "{{count}} existing participants will be updated",
+    "updateRecords": "{{count}} existing participants will be updated (matched by name + gender + email)",
     "confirmTitle": "Confirm Import",
     "confirmDesc": "This may affect existing data",
     "currentParticipants": "Current participants",
     "newParticipantsToAdd": "New participants to add",
     "participantsToUpdate": "Participants to update",
-    "overwriteWarning": "Existing participants with the same email will be overwritten with CSV data.",
+    "overwriteWarning": "Existing participants with matching name, gender, and email will be overwritten with CSV data.",
     "proceedImport": "Proceed with Import",
-    "andMore": "and {{count}} more records"
+    "andMore": "and {{count}} more records",
+    "csvFormatTitle": "CSV Format Guidelines",
+    "metadataNote": "Metadata: Any additional columns will be stored as metadata",
+    "updatesNote": "Updates: Existing participants (matched by name + gender + email) will be updated",
+    "exampleCSV": "Example CSV:"
   },
   "auditLog": {
     "title": "Audit Log",
+    "subtitle": "Track all changes made in the application",
     "clearAll": "Clear All",
     "confirmClear": "Are you sure you want to clear all audit logs?",
     "noLogs": "No audit logs yet",
+    "logsAppearHere": "Changes will appear here as they are made",
     "action": "Action",
     "target": "Target",
     "user": "User",
@@ -188,28 +278,40 @@
     "checkedIn": "Checked In",
     "checkedOut": "Checked Out",
     "assigned": "Assigned",
-    "imported": "Imported"
+    "imported": "Imported",
+    "liveUpdates": "Live updates",
+    "showingLogs": "Showing {{count}} log(s)"
   },
   "settings": {
     "title": "Settings",
+    "subtitle": "Configure application settings",
     "userSettings": "User Settings",
     "userName": "User Name",
+    "enterUserName": "Enter your name",
     "databaseSettings": "Database Settings",
     "connectionStatus": "Connection Status",
     "connected": "Connected",
     "disconnected": "Disconnected",
     "importConfig": "Import Config File",
+    "changeConfig": "Change Config",
     "clearConfig": "Clear Config",
     "language": "Language",
     "english": "English",
     "korean": "한국어",
     "appInfo": "App Information",
-    "version": "Version"
+    "version": "Version",
+    "configSuccess": "Configuration imported successfully",
+    "configFailed": "Failed to import configuration",
+    "configCleared": "Configuration cleared",
+    "clearConfigFailed": "Failed to clear configuration",
+    "userNameSaved": "User name saved",
+    "userNameRequired": "User name is required"
   },
   "validation": {
     "required": "This field is required",
     "invalidEmail": "Invalid email address",
-    "invalidPhone": "Invalid phone number"
+    "invalidPhone": "Invalid phone number",
+    "groupNameRequired": "Group name is required"
   },
   "toast": {
     "saveSuccess": "Saved successfully",
@@ -221,6 +323,10 @@
     "exportSuccess": "Export successful",
     "exportFailed": "Export failed",
     "importSuccess": "Import successful",
-    "importFailed": "Import failed"
+    "importFailed": "Import failed",
+    "createFailed": "Failed to create",
+    "updateFailed": "Failed to update",
+    "paymentUpdated": "Payment status updated to {{status}}",
+    "paymentUpdateFailed": "Failed to update payment status"
   }
 }
