--- a/src/renderer/src/i18n/locales/ko.json
+++ b/src/renderer/src/i18n/locales/ko.json
@@ -1,6 +1,7 @@
 {
   "common": {
     "save": "저장",
+    "saving": "저장 중...",
     "cancel": "취소",
     "edit": "수정",
     "delete": "삭제",
@@ -27,7 +28,22 @@
     "phone": "전화번호",
     "status": "상태",
     "date": "날짜",
-    "time": "시간"
+    "time": "시간",
+    "move": "이동",
+    "remove": "제거",
+    "members": "명",
+    "goToSearch": "검색으로 이동",
+    "clickToChange": "클릭하여 변경",
+    "noLimit": "제한 없음",
+    "notAssigned": "미배정",
+    "select": "선택...",
+    "orCreateNew": "또는 새로 생성",
+    "completed": "완료됨",
+    "active": "활성",
+    "since": "부터",
+    "updating": "업데이트 중...",
+    "currentStatus": "현재 상태",
+    "newStatus": "새 상태"
   },
   "nav": {
     "search": "검색",
@@ -40,8 +56,15 @@
     "auditLog": "변경 이력",
     "settings": "설정"
   },
+  "home": {
+    "title": "참가자 체크인",
+    "subtitle": "이름, 이메일 또는 전화번호로 검색",
+    "searchPlaceholder": "검색어를 입력하세요...",
+    "noResults": "검색 결과가 없습니다"
+  },
   "participant": {
     "title": "참가자",
+    "subtitle": "등록된 모든 참가자를 관리합니다",
     "addParticipant": "참가자 추가",
     "editParticipant": "참가자 수정",
     "participantDetail": "참가자 상세",
@@ -61,17 +84,21 @@
     "unpaid": "미결제",
     "memo": "메모",
     "addMemo": "메모 추가",
-    "noMemo": "메모 없음",
-    "checkInHistory": "체크인 이력",
+    "editMemo": "수정",
+    "noMemo": "메모가 없습니다",
+    "memoPlaceholder": "참가자에 대한 메모를 입력하세요...",
+    "checkInHistory": "체크인 / 체크아웃 이력",
     "checkIn": "체크인",
     "checkOut": "체크아웃",
     "checkedIn": "체크인됨",
     "notCheckedIn": "미체크인",
     "currentlyCheckedIn": "현재 체크인 중",
+    "checkingIn": "체크인 중...",
     "session": "세션",
     "duration": "체류 시간",
     "activeSession": "활성 세션",
     "noCheckInHistory": "체크인 이력이 없습니다",
+    "checkInHistoryDesc": "체크인 및 체크아웃 이벤트가 여기에 표시됩니다",
     "assign": "배정",
     "change": "변경",
     "unassigned": "미배정",
@@ -84,35 +111,92 @@
     "markAsPaid": "결제 완료로 변경",
     "markAsUnpaid": "미결제로 변경",
     "confirmPaymentChange": "결제 상태를 변경하시겠습니까?",
+    "changePaymentStatus": "결제 상태 변경",
+    "paymentChangeConfirmText": "결제 상태를",
+    "to": "에서",
     "selected": "선택됨",
     "moveToGroup": "그룹으로 이동",
-    "moveToRoom": "객실로 이동"
+    "moveToRoom": "객실로 이동",
+    "participantNotFound": "참가자를 찾을 수 없습니다",
+    "groupRoomAssignment": "그룹 및 객실 배정",
+    "selectGroup": "그룹 선택",
+    "selectRoom": "객실 선택",
+    "roomFull": "객실이 만실입니다",
+    "nameRequired": "이름과 이메일은 필수입니다",
+    "updateSuccess": "참가자 정보가 업데이트되었습니다",
+    "memoUpdated": "메모가 업데이트되었습니다"
   },
   "group": {
     "title": "그룹",
+    "subtitle": "참가자 그룹을 관리합니다",
     "createGroup": "그룹 생성",
+    "addGroup": "그룹 추가",
     "editGroup": "그룹 수정",
+    "addNewGroup": "새 그룹 추가",
     "groupName": "그룹 이름",
+    "groupNamePlaceholder": "그룹 이름",
     "expectedCapacity": "예상 인원",
+    "expectedOptional": "예상 인원 (선택)",
     "participantCount": "참가자 수",
     "deleteGroup": "그룹 삭제",
-    "confirmDelete": "이 그룹을 삭제하시겠습니까?",
-    "noGroups": "생성된 그룹이 없습니다"
+    "confirmDelete": "\"{{name}}\" 그룹을 삭제하시겠습니까? 참가자는 배정 해제됩니다.",
+    "noGroups": "생성된 그룹이 없습니다",
+    "noGroupsDesc": "참가자를 조직하기 위한 그룹을 추가하세요",
+    "groupNotFound": "그룹을 찾을 수 없습니다",
+    "backToGroups": "그룹 목록으로",
+    "membersCount": "멤버 ({{count}}명)",
+    "noMembers": "이 그룹에 멤버가 없습니다",
+    "groupUpdated": "그룹이 업데이트되었습니다",
+    "groupCreated": "\"{{name}}\" 그룹이 생성되었습니다",
+    "groupDeleted": "\"{{name}}\" 그룹이 삭제되었습니다",
+    "participantRemoved": "참가자가 그룹에서 제거되었습니다",
+    "movedTo": "{{name}}(으)로 이동되었습니다",
+    "noOtherGroups": "다른 그룹이 없습니다",
+    "importGroups": "그룹 가져오기",
+    "importPlaceholder": "그룹 A\n그룹 B\n그룹 C",
+    "importHelpText": "또는 아래에 이름을 붙여넣으세요 (한 줄에 하나씩)",
+    "importedCount": "{{count}}개 그룹을 가져왔습니다",
+    "importedFromCSV": "CSV에서 {{count}}개 그룹을 가져왔습니다"
   },
   "room": {
     "title": "객실",
+    "subtitle": "숙박 객실을 관리합니다",
     "createRoom": "객실 생성",
+    "addRoom": "객실 추가",
     "editRoom": "객실 수정",
+    "addNewRoom": "새 객실 추가",
     "roomNumber": "객실 번호",
+    "roomNumberPlaceholder": "객실 번호",
+    "capacity": "수용 인원",
     "maxCapacity": "최대 수용 인원",
     "currentOccupancy": "현재 수용 인원",
     "occupancy": "수용 현황",
+    "occupied": "수용됨",
     "available": "여유 있음",
     "almostFull": "거의 참",
     "full": "만실",
     "deleteRoom": "객실 삭제",
-    "confirmDelete": "이 객실을 삭제하시겠습니까?",
-    "noRooms": "생성된 객실이 없습니다"
+    "confirmDelete": "\"{{number}}\" 객실을 삭제하시겠습니까?",
+    "confirmDeleteWithParticipants": "\"{{number}}\" 객실을 삭제하시겠습니까? {{count}}명의 참가자가 배정 해제됩니다.",
+    "noRooms": "생성된 객실이 없습니다",
+    "noRoomsDesc": "참가자 숙박을 위한 객실을 추가하세요",
+    "roomNotFound": "객실을 찾을 수 없습니다",
+    "backToRooms": "객실 목록으로",
+    "participantsCount": "참가자 ({{count}}명)",
+    "roomEmpty": "이 객실은 비어 있습니다",
+    "roomUpdated": "객실이 업데이트되었습니다",
+    "roomCreated": "\"{{number}}\" 객실이 생성되었습니다",
+    "roomDeleted": "\"{{number}}\" 객실이 삭제되었습니다",
+    "participantRemoved": "참가자가 객실에서 제거되었습니다",
+    "movedToRoom": "{{number}}호로 이동되었습니다",
+    "noOtherRooms": "다른 객실이 없습니다",
+    "roomRequired": "객실 번호는 필수입니다",
+    "capacityError": "수용 인원은 현재 인원보다 작을 수 없습니다",
+    "importRooms": "객실 가져오기",
+    "importPlaceholder": "101,4\n102,4\n103,6",
+    "importHelpText": "또는 아래에 붙여넣으세요 (객실번호,수용인원 형식)",
+    "importedCount": "{{count}}개 객실을 가져왔습니다",
+    "importedFromCSV": "CSV에서 {{count}}개 객실을 가져왔습니다"
   },
   "statistics": {
     "title": "통계",
@@ -138,7 +222,7 @@
     "noGroupData": "그룹 데이터가 없습니다",
     "checkIns": "체크인",
     "checkOuts": "체크아웃",
-    "exportSuccess": "PDF 내보내기 완료",
+    "exportSuccess": "통계 PDF 내보내기 완료",
     "exportFailed": "PDF 내보내기 실패"
   },
   "import": {
@@ -159,24 +243,30 @@
     "failed": "가져오기에 실패했습니다. Firebase 설정을 확인하세요.",
     "backToParticipants": "참가자 목록으로 돌아가기",
     "existingDataWarning": "기존 데이터가 있습니다",
-    "existingDataDesc": "현재 {{count}}명의 참가자가 등록되어 있습니다. CSV 파일에 동일한 이메일이 있는 경우 기존 정보가 업데이트됩니다.",
+    "existingDataDesc": "현재 {{count}}명의 참가자가 등록되어 있습니다. CSV 파일에 동일한 이름, 성별, 이메일이 있는 경우 기존 정보가 업데이트됩니다.",
     "overlapWarning": "일부 기존 데이터가 업데이트됩니다",
     "newRecords": "{{count}}명의 새 참가자가 추가됩니다",
-    "updateRecords": "{{count}}명의 기존 참가자 정보가 업데이트됩니다",
+    "updateRecords": "{{count}}명의 기존 참가자 정보가 업데이트됩니다 (이름 + 성별 + 이메일 기준)",
     "confirmTitle": "데이터 가져오기 확인",
     "confirmDesc": "기존 데이터에 영향을 줄 수 있습니다",
     "currentParticipants": "현재 등록된 참가자",
     "newParticipantsToAdd": "새로 추가될 참가자",
     "participantsToUpdate": "업데이트될 참가자",
-    "overwriteWarning": "동일한 이메일을 가진 기존 참가자의 정보가 CSV 파일의 내용으로 덮어씌워집니다.",
+    "overwriteWarning": "동일한 이름, 성별, 이메일을 가진 기존 참가자의 정보가 CSV 파일의 내용으로 덮어씌워집니다.",
     "proceedImport": "가져오기 진행",
-    "andMore": "외 {{count}}개 레코드 더 있음"
+    "andMore": "외 {{count}}개 레코드 더 있음",
+    "csvFormatTitle": "CSV 형식 가이드",
+    "metadataNote": "메타데이터: 추가 열은 메타데이터로 저장됩니다",
+    "updatesNote": "업데이트: 기존 참가자 (이름 + 성별 + 이메일 일치)는 업데이트됩니다",
+    "exampleCSV": "CSV 예시:"
   },
   "auditLog": {
     "title": "변경 이력",
+    "subtitle": "애플리케이션에서 발생한 모든 변경 사항을 추적합니다",
     "clearAll": "전체 삭제",
     "confirmClear": "모든 변경 이력을 삭제하시겠습니까?",
     "noLogs": "변경 이력이 없습니다",
+    "logsAppearHere": "변경 사항이 여기에 표시됩니다",
     "action": "작업",
     "target": "대상",
     "user": "사용자",
@@ -188,28 +278,40 @@
     "checkedIn": "체크인",
     "checkedOut": "체크아웃",
     "assigned": "배정됨",
-    "imported": "가져옴"
+    "imported": "가져옴",
+    "liveUpdates": "실시간 업데이트",
+    "showingLogs": "{{count}}개의 로그 표시 중"
   },
   "settings": {
     "title": "설정",
+    "subtitle": "애플리케이션 설정을 구성합니다",
     "userSettings": "사용자 설정",
     "userName": "사용자 이름",
+    "enterUserName": "이름을 입력하세요",
     "databaseSettings": "데이터베이스 설정",
     "connectionStatus": "연결 상태",
     "connected": "연결됨",
     "disconnected": "연결 끊김",
     "importConfig": "설정 파일 가져오기",
+    "changeConfig": "설정 변경",
     "clearConfig": "설정 초기화",
     "language": "언어",
     "english": "English",
     "korean": "한국어",
     "appInfo": "앱 정보",
-    "version": "버전"
+    "version": "버전",
+    "configSuccess": "설정을 성공적으로 가져왔습니다",
+    "configFailed": "설정을 가져오는 데 실패했습니다",
+    "configCleared": "설정이 초기화되었습니다",
+    "clearConfigFailed": "설정 초기화에 실패했습니다",
+    "userNameSaved": "사용자 이름이 저장되었습니다",
+    "userNameRequired": "사용자 이름을 입력하세요"
   },
   "validation": {
     "required": "필수 항목입니다",
     "invalidEmail": "유효하지 않은 이메일 주소입니다",
-    "invalidPhone": "유효하지 않은 전화번호입니다"
+    "invalidPhone": "유효하지 않은 전화번호입니다",
+    "groupNameRequired": "그룹 이름은 필수입니다"
   },
   "toast": {
     "saveSuccess": "저장되었습니다",
@@ -221,6 +323,10 @@
     "exportSuccess": "내보내기 완료",
     "exportFailed": "내보내기 실패",
     "importSuccess": "가져오기 완료",
-    "importFailed": "가져오기 실패"
+    "importFailed": "가져오기 실패",
+    "createFailed": "생성에 실패했습니다",
+    "updateFailed": "업데이트에 실패했습니다",
+    "paymentUpdated": "결제 상태가 {{status}}(으)로 변경되었습니다",
+    "paymentUpdateFailed": "결제 상태 변경에 실패했습니다"
   }
 }
