feat: enhance multilingual support by integrating translations across various components, improving participant and room management features, and adding confirmation dialogs for critical actions

--- a/src/renderer/src/i18n/locales/en.json
+++ b/src/renderer/src/i18n/locales/en.json
@@ -32,6 +32,8 @@
     "move": "Move",
     "remove": "Remove",
     "members": "members",
+    "membersTitle": "Members",
+    "occupants": "Occupants",
     "goToSearch": "Go to Search",
     "clickToChange": "Click to change",
     "noLimit": "No limit",
@@ -60,7 +62,10 @@
     "title": "Participant Check-In",
     "subtitle": "Search by name, email, or phone number",
     "searchPlaceholder": "Start typing to search...",
-    "noResults": "No participants found"
+    "noResults": "No participants found",
+    "welcome": "Welcome to CheckIn",
+    "welcomeDesc": "Please enter your name to continue. This will be used to track changes.",
+    "continue": "Continue"
   },
   "participant": {
     "title": "Participants",
@@ -117,7 +122,17 @@
     "selected": "selected",
     "moveToGroup": "Move to Group",
     "moveToRoom": "Move to Room",
+    "moveToAnotherRoom": "Move {{count}} participant(s) to another room",
+    "moveToAnotherGroup": "Move {{count}} participant(s) to another group",
+    "available": "available",
     "participantNotFound": "Participant not found",
+    "filterPlaceholder": "Filter participants...",
+    "viewAllSubtitle": "View all participants, groups, and rooms",
+    "allData": "All Data",
+    "payment": "Payment",
+    "noParticipantsFound": "No participants found",
+    "scrollToLoadMore": "Scroll to load more...",
+    "clearSort": "Clear sort",
     "groupRoomAssignment": "Group & Room Assignment",
     "selectGroup": "Select Group",
     "selectRoom": "Select Room",
@@ -137,10 +152,12 @@
     "groupNamePlaceholder": "Group name",
     "expectedCapacity": "Expected Capacity",
     "expectedOptional": "Expected (optional)",
+    "optional": "Optional",
     "participantCount": "Participants",
     "deleteGroup": "Delete Group",
     "confirmDelete": "Delete group \"{{name}}\"? Participants will be unassigned.",
     "noGroups": "No groups yet",
+    "noGroupsCreated": "No groups created yet",
     "noGroupsDesc": "Add groups to organize participants",
     "groupNotFound": "Group not found",
     "backToGroups": "Back to groups",
@@ -153,10 +170,19 @@
     "movedTo": "Moved to {{name}}",
     "noOtherGroups": "No other groups available",
     "importGroups": "Import Groups",
-    "importPlaceholder": "Group A\nGroup B\nGroup C",
-    "importHelpText": "or paste names below (one per line)",
+    "importPlaceholder": "Group A,male\nGroup B,female\nGroup C,custom-tag",
+    "importHelpText": "or paste below (name,tags per line - tags optional)",
     "importedCount": "Imported {{count}} groups",
-    "importedFromCSV": "Imported {{count}} groups from CSV"
+    "importedFromCSV": "Imported {{count}} groups from CSV",
+    "tags": "Tags",
+    "tagMale": "Male",
+    "tagFemale": "Female",
+    "addTag": "Add tag",
+    "customTag": "Custom tag",
+    "addCustomTag": "Add custom tag...",
+    "tagPlaceholder": "Enter tag name",
+    "presetTags": "Preset Tags",
+    "customTags": "Custom Tags"
   },
   "room": {
     "title": "Rooms",
@@ -167,6 +193,7 @@
     "addNewRoom": "Add New Room",
     "roomNumber": "Room Number",
     "roomNumberPlaceholder": "Room number",
+    "capacityShort": "Max",
     "capacity": "Capacity",
     "maxCapacity": "Max Capacity",
     "currentOccupancy": "Current Occupancy",
@@ -179,6 +206,7 @@
     "confirmDelete": "Delete room \"{{number}}\"?",
     "confirmDeleteWithParticipants": "Delete room \"{{number}}\"? {{count}} participants will be unassigned.",
     "noRooms": "No rooms yet",
+    "noRoomsCreated": "No rooms created yet",
     "noRoomsDesc": "Add rooms for participant accommodation",
     "roomNotFound": "Room not found",
     "backToRooms": "Back to rooms",
@@ -193,10 +221,21 @@
     "roomRequired": "Room number is required",
     "capacityError": "Capacity cannot be less than current occupancy",
     "importRooms": "Import Rooms",
-    "importPlaceholder": "101,4\n102,4\n103,6",
+    "importPlaceholder": "101,4,male,general\n102,4,female,guest\n103,6,mixed,leadership",
     "importHelpText": "or paste below (room,capacity per line)",
     "importedCount": "Imported {{count}} rooms",
-    "importedFromCSV": "Imported {{count}} rooms from CSV"
+    "importedFromCSV": "Imported {{count}} rooms from CSV",
+    "genderType": "Gender Type",
+    "genderMale": "Male",
+    "genderFemale": "Female",
+    "genderMixed": "Mixed",
+    "roomType": "Room Type",
+    "typeGeneral": "General",
+    "typeGuest": "Guest",
+    "typeLeadership": "Leadership",
+    "selectGenderType": "Select gender type",
+    "selectRoomType": "Select room type",
+    "importHelpTextExtended": "or paste below (room,capacity,genderType,roomType per line)"
   },
   "statistics": {
     "title": "Statistics",
@@ -258,7 +297,14 @@
     "csvFormatTitle": "CSV Format Guidelines",
     "metadataNote": "Metadata: Any additional columns will be stored as metadata",
     "updatesNote": "Updates: Existing participants (matched by name + gender + email) will be updated",
-    "exampleCSV": "Example CSV:"
+    "exampleCSV": "Example CSV:",
+    "parsingError": "CSV parsing error: {{error}}",
+    "fileReadError": "Failed to read file: {{error}}",
+    "importFailed": "Import failed. Please check your Firebase configuration.",
+    "requiredColumnsTitle": "Required columns:",
+    "requiredColumnsValue": "name, email",
+    "optionalColumnsTitle": "Optional columns:",
+    "optionalColumnsValue": "gender, age, stake, ward, phoneNumber (or phone), groupName (or group), roomNumber (or room)"
   },
   "auditLog": {
     "title": "Audit Log",
@@ -305,7 +351,33 @@
     "configCleared": "Configuration cleared",
     "clearConfigFailed": "Failed to clear configuration",
     "userNameSaved": "User name saved",
-    "userNameRequired": "User name is required"
+    "userNameRequired": "User name is required",
+    "dataManagement": "Data Management",
+    "resetData": "Reset All Data",
+    "resetDataDesc": "Delete all participants, groups, and rooms data",
+    "resetDataWarning": "Warning: This action cannot be undone!",
+    "resetDataConfirmTitle": "Reset All Data?",
+    "resetDataConfirmDesc": "This will permanently delete all data including:",
+    "resetDataConfirmItem1": "All participants and their check-in history",
+    "resetDataConfirmItem2": "All groups",
+    "resetDataConfirmItem3": "All rooms",
+    "resetDataConfirmWarning": "This action cannot be undone. Please type 'DELETE' to confirm.",
+    "resetDataTypePlaceholder": "Type DELETE to confirm",
+    "typeToConfirm": "Type '{{phrase}}' to confirm",
+    "resetDataSuccess": "All data has been reset successfully",
+    "resetDataFailed": "Failed to reset data",
+    "resetting": "Resetting...",
+    "deleted": "deleted",
+    "firebaseConfig": "Firebase Configuration",
+    "pleaseImportConfig": "Please import a Firebase configuration JSON file",
+    "howToGetCredentials": "How to get Firebase credentials",
+    "step1": "Go to the Firebase Console (console.firebase.google.com)",
+    "step2": "Select your project (or create a new one)",
+    "step3": "Click the gear icon → Project settings",
+    "step4": "Scroll down to \"Your apps\" section",
+    "step5": "If no web app exists, click \"Add app\" and select Web",
+    "step6": "Download or copy the config as a JSON file",
+    "exampleJsonFormat": "Example JSON format:"
   },
   "validation": {
     "required": "This field is required",
@@ -327,6 +399,10 @@
     "createFailed": "Failed to create",
     "updateFailed": "Failed to update",
     "paymentUpdated": "Payment status updated to {{status}}",
-    "paymentUpdateFailed": "Failed to update payment status"
+    "paymentUpdateFailed": "Failed to update payment status",
+    "updateRoomFailed": "Failed to update room",
+    "removeParticipantFailed": "Failed to remove participant",
+    "moveParticipantFailed": "Failed to move participant",
+    "updateGroupFailed": "Failed to update group"
   }
 }
