--- a/src/renderer/src/i18n/locales/ko.json
+++ b/src/renderer/src/i18n/locales/ko.json
@@ -32,6 +32,8 @@
     "move": "이동",
     "remove": "제거",
     "members": "명",
+    "membersTitle": "멤버",
+    "occupants": "입실자",
     "goToSearch": "검색으로 이동",
     "clickToChange": "클릭하여 변경",
     "noLimit": "제한 없음",
@@ -60,7 +62,10 @@
     "title": "참가자 체크인",
     "subtitle": "이름, 이메일 또는 전화번호로 검색",
     "searchPlaceholder": "검색어를 입력하세요...",
-    "noResults": "검색 결과가 없습니다"
+    "noResults": "검색 결과가 없습니다",
+    "welcome": "CheckIn에 오신 것을 환영합니다",
+    "welcomeDesc": "계속하려면 이름을 입력하세요. 변경 사항 추적에 사용됩니다.",
+    "continue": "계속"
   },
   "participant": {
     "title": "참가자",
@@ -79,9 +84,9 @@
     "stake": "스테이크",
     "group": "그룹",
     "room": "객실",
-    "paymentStatus": "결제 상태",
-    "paid": "결제 완료",
-    "unpaid": "미결제",
+    "paymentStatus": "납부 상태",
+    "paid": "납부 완료",
+    "unpaid": "미납",
     "memo": "메모",
     "addMemo": "메모 추가",
     "editMemo": "수정",
@@ -108,16 +113,26 @@
     "exportCSV": "CSV로 내보내기",
     "exportPDF": "PDF 내보내기",
     "exporting": "내보내는 중...",
-    "markAsPaid": "결제 완료로 변경",
-    "markAsUnpaid": "미결제로 변경",
-    "confirmPaymentChange": "결제 상태를 변경하시겠습니까?",
-    "changePaymentStatus": "결제 상태 변경",
-    "paymentChangeConfirmText": "결제 상태를",
+    "markAsPaid": "납부 완료로 변경",
+    "markAsUnpaid": "미납으로 변경",
+    "confirmPaymentChange": "납부 상태를 변경하시겠습니까?",
+    "changePaymentStatus": "납부 상태 변경",
+    "paymentChangeConfirmText": "납부 상태를",
     "to": "에서",
     "selected": "선택됨",
     "moveToGroup": "그룹으로 이동",
     "moveToRoom": "객실로 이동",
+    "moveToAnotherRoom": "{{count}}명의 참가자를 다른 객실로 이동",
+    "moveToAnotherGroup": "{{count}}명의 참가자를 다른 그룹으로 이동",
+    "available": "여유",
     "participantNotFound": "참가자를 찾을 수 없습니다",
+    "filterPlaceholder": "참가자 검색...",
+    "viewAllSubtitle": "모든 참가자, 그룹, 객실을 볼 수 있습니다",
+    "allData": "전체 데이터",
+    "payment": "납부",
+    "noParticipantsFound": "참가자를 찾을 수 없습니다",
+    "scrollToLoadMore": "스크롤하여 더 보기...",
+    "clearSort": "정렬 초기화",
     "groupRoomAssignment": "그룹 및 객실 배정",
     "selectGroup": "그룹 선택",
     "selectRoom": "객실 선택",
@@ -137,10 +152,12 @@
     "groupNamePlaceholder": "그룹 이름",
     "expectedCapacity": "예상 인원",
     "expectedOptional": "예상 인원 (선택)",
+    "optional": "선택",
     "participantCount": "참가자 수",
     "deleteGroup": "그룹 삭제",
     "confirmDelete": "\"{{name}}\" 그룹을 삭제하시겠습니까? 참가자는 배정 해제됩니다.",
     "noGroups": "생성된 그룹이 없습니다",
+    "noGroupsCreated": "생성된 그룹이 없습니다",
     "noGroupsDesc": "참가자를 조직하기 위한 그룹을 추가하세요",
     "groupNotFound": "그룹을 찾을 수 없습니다",
     "backToGroups": "그룹 목록으로",
@@ -153,10 +170,19 @@
     "movedTo": "{{name}}(으)로 이동되었습니다",
     "noOtherGroups": "다른 그룹이 없습니다",
     "importGroups": "그룹 가져오기",
-    "importPlaceholder": "그룹 A\n그룹 B\n그룹 C",
-    "importHelpText": "또는 아래에 이름을 붙여넣으세요 (한 줄에 하나씩)",
+    "importPlaceholder": "그룹 A,male\n그룹 B,female\n그룹 C,커스텀태그",
+    "importHelpText": "또는 아래에 붙여넣으세요 (이름,태그 형식 - 태그 선택)",
     "importedCount": "{{count}}개 그룹을 가져왔습니다",
-    "importedFromCSV": "CSV에서 {{count}}개 그룹을 가져왔습니다"
+    "importedFromCSV": "CSV에서 {{count}}개 그룹을 가져왔습니다",
+    "tags": "태그",
+    "tagMale": "남성",
+    "tagFemale": "여성",
+    "addTag": "태그 추가",
+    "customTag": "커스텀 태그",
+    "addCustomTag": "커스텀 태그 추가...",
+    "tagPlaceholder": "태그 이름 입력",
+    "presetTags": "기본 태그",
+    "customTags": "커스텀 태그"
   },
   "room": {
     "title": "객실",
@@ -167,6 +193,7 @@
     "addNewRoom": "새 객실 추가",
     "roomNumber": "객실 번호",
     "roomNumberPlaceholder": "객실 번호",
+    "capacityShort": "최대",
     "capacity": "수용 인원",
     "maxCapacity": "최대 수용 인원",
     "currentOccupancy": "현재 수용 인원",
@@ -179,6 +206,7 @@
     "confirmDelete": "\"{{number}}\" 객실을 삭제하시겠습니까?",
     "confirmDeleteWithParticipants": "\"{{number}}\" 객실을 삭제하시겠습니까? {{count}}명의 참가자가 배정 해제됩니다.",
     "noRooms": "생성된 객실이 없습니다",
+    "noRoomsCreated": "생성된 객실이 없습니다",
     "noRoomsDesc": "참가자 숙박을 위한 객실을 추가하세요",
     "roomNotFound": "객실을 찾을 수 없습니다",
     "backToRooms": "객실 목록으로",
@@ -193,10 +221,21 @@
     "roomRequired": "객실 번호는 필수입니다",
     "capacityError": "수용 인원은 현재 인원보다 작을 수 없습니다",
     "importRooms": "객실 가져오기",
-    "importPlaceholder": "101,4\n102,4\n103,6",
+    "importPlaceholder": "101,4,male,general\n102,4,female,guest\n103,6,mixed,leadership",
     "importHelpText": "또는 아래에 붙여넣으세요 (객실번호,수용인원 형식)",
     "importedCount": "{{count}}개 객실을 가져왔습니다",
-    "importedFromCSV": "CSV에서 {{count}}개 객실을 가져왔습니다"
+    "importedFromCSV": "CSV에서 {{count}}개 객실을 가져왔습니다",
+    "genderType": "성별 구분",
+    "genderMale": "남성",
+    "genderFemale": "여성",
+    "genderMixed": "혼성",
+    "roomType": "객실 유형",
+    "typeGeneral": "일반",
+    "typeGuest": "게스트",
+    "typeLeadership": "리더십",
+    "selectGenderType": "성별 구분 선택",
+    "selectRoomType": "객실 유형 선택",
+    "importHelpTextExtended": "또는 아래에 붙여넣으세요 (객실번호,수용인원,성별구분,유형 형식)"
   },
   "statistics": {
     "title": "통계",
@@ -204,7 +243,7 @@
     "totalRegistered": "총 등록 인원",
     "currentlyCheckedIn": "현재 체크인",
     "roomOccupancy": "객실 수용 현황",
-    "paymentStatus": "결제 현황",
+    "paymentStatus": "납부 현황",
     "ofTotal": "전체 대비",
     "occupied": "수용됨",
     "checkInStatus": "체크인 현황",
@@ -258,7 +297,14 @@
     "csvFormatTitle": "CSV 형식 가이드",
     "metadataNote": "메타데이터: 추가 열은 메타데이터로 저장됩니다",
     "updatesNote": "업데이트: 기존 참가자 (이름 + 성별 + 이메일 일치)는 업데이트됩니다",
-    "exampleCSV": "CSV 예시:"
+    "exampleCSV": "CSV 예시:",
+    "parsingError": "CSV 파싱 오류: {{error}}",
+    "fileReadError": "파일 읽기 실패: {{error}}",
+    "importFailed": "가져오기에 실패했습니다. Firebase 설정을 확인하세요.",
+    "requiredColumnsTitle": "필수 열:",
+    "requiredColumnsValue": "name, email",
+    "optionalColumnsTitle": "선택 열:",
+    "optionalColumnsValue": "gender, age, stake, ward, phoneNumber (또는 phone), groupName (또는 group), roomNumber (또는 room)"
   },
   "auditLog": {
     "title": "변경 이력",
@@ -305,7 +351,33 @@
     "configCleared": "설정이 초기화되었습니다",
     "clearConfigFailed": "설정 초기화에 실패했습니다",
     "userNameSaved": "사용자 이름이 저장되었습니다",
-    "userNameRequired": "사용자 이름을 입력하세요"
+    "userNameRequired": "사용자 이름을 입력하세요",
+    "dataManagement": "데이터 관리",
+    "resetData": "모든 데이터 초기화",
+    "resetDataDesc": "모든 참가자, 그룹, 객실 데이터를 삭제합니다",
+    "resetDataWarning": "경고: 이 작업은 되돌릴 수 없습니다!",
+    "resetDataConfirmTitle": "모든 데이터를 초기화하시겠습니까?",
+    "resetDataConfirmDesc": "다음 데이터가 영구적으로 삭제됩니다:",
+    "resetDataConfirmItem1": "모든 참가자 및 체크인 기록",
+    "resetDataConfirmItem2": "모든 그룹",
+    "resetDataConfirmItem3": "모든 객실",
+    "resetDataConfirmWarning": "이 작업은 되돌릴 수 없습니다. 확인하려면 'DELETE'를 입력하세요.",
+    "resetDataTypePlaceholder": "DELETE 입력",
+    "typeToConfirm": "확인하려면 '{{phrase}}'을(를) 입력하세요",
+    "resetDataSuccess": "모든 데이터가 초기화되었습니다",
+    "resetDataFailed": "데이터 초기화에 실패했습니다",
+    "resetting": "초기화 중...",
+    "deleted": "삭제됨",
+    "firebaseConfig": "Firebase 설정",
+    "pleaseImportConfig": "Firebase 설정 JSON 파일을 가져와 주세요",
+    "howToGetCredentials": "Firebase 자격 증명 가져오는 방법",
+    "step1": "Firebase Console (console.firebase.google.com)로 이동",
+    "step2": "프로젝트를 선택하거나 새로 생성",
+    "step3": "톱니바퀴 아이콘 클릭 → 프로젝트 설정",
+    "step4": "\"내 앱\" 섹션으로 스크롤",
+    "step5": "웹 앱이 없으면 \"앱 추가\"를 클릭하고 웹 선택",
+    "step6": "설정을 JSON 파일로 다운로드 또는 복사",
+    "exampleJsonFormat": "JSON 형식 예시:"
   },
   "validation": {
     "required": "필수 항목입니다",
@@ -326,7 +398,11 @@
     "importFailed": "가져오기 실패",
     "createFailed": "생성에 실패했습니다",
     "updateFailed": "업데이트에 실패했습니다",
-    "paymentUpdated": "결제 상태가 {{status}}(으)로 변경되었습니다",
-    "paymentUpdateFailed": "결제 상태 변경에 실패했습니다"
+    "paymentUpdated": "납부 상태가 {{status}}(으)로 변경되었습니다",
+    "paymentUpdateFailed": "납부 상태 변경에 실패했습니다",
+    "updateRoomFailed": "객실 업데이트에 실패했습니다",
+    "removeParticipantFailed": "참가자 제거에 실패했습니다",
+    "moveParticipantFailed": "참가자 이동에 실패했습니다",
+    "updateGroupFailed": "그룹 업데이트에 실패했습니다"
   }
 }
